--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,10 @@
   <img src="assets/images/item.jpg" alt="hard drive">
   <div class="cart-item__title">Seagate Portable 2TB External Hard Drive Portable HDD – USB 3.0 for PC, Mac, PS4, & Xbox</div>
   <div class="cart-item__price">{{price | currency:'USD'}}</div>
-  <div class="cart-item__discount">{{'discount' | uppercase }}: <span>{{discount | percentage}}</span></div>
-  <div class="cart-item__final-price">{{ price - (price * discount / 100) | currency: 'USD'}}</div>
+  <div class="cart-item__discount">{{'discount' | uppercase }}: <span [class.highlight]="discount > 5">{{discount | number: '2.2-2' | percentage}}</span></div>
+<!--  <div class="cart-item__discount">{{'discount' | uppercase }}: <span [class.highlight-2]="discount > 5" [class.highlight]="discount > 5">{{discount | number: '2.2-2' | percentage}}</span></div>-->
+<!--  <div class="cart-item__discount">{{'discount' | uppercase }}: <span [class.highlight]="shouldHighlight()">{{discount | number: '2.2-2' | percentage}}</span></div>-->
+  <div class="cart-item__final-price" [style.background-color]="priceChecker()">{{ price - (price * discount / 100) | currency: 'USD'}}</div>
 </div>
 <div class="control-panel">
   <div class="form-group">
