--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -39,3 +39,11 @@ h1{
   margin-top: 10px;
   font-size: 1rem;
 }
+
+.highlight{
+  background-color: yellow;
+}
+
+.highlight-2{
+  font-weight: bold;
+}
