--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<h1>Angular in Action</h1>
+<!--<h1 [attr.title]="title">Angular in Action</h1>-->
+<h1 [attr.class]="myClass">Angular in Action</h1>
 <div class="cart-item">
   <img src="assets/images/item.jpg" alt="hard drive">
   <div class="cart-item__title">Seagate Portable 2TB External Hard Drive Portable HDD – USB 3.0 for PC, Mac, PS4, & Xbox</div>
@@ -19,3 +20,5 @@
     <input type="number" placeholder="Discount" min="0" [(ngModel)]="discount">
   </div>
 </div>
+<!--<button (click)="changeTooltip()">Let's change the tooltip!</button>-->
+<button (click)="changeClass()">Let's change the class!</button>
