--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -47,3 +47,11 @@ h1{
 .highlight-2{
   font-weight: bold;
 }
+
+.title-1{
+  background-color: yellow;
+}
+
+.title-2{
+  background-color: dodgerblue;
+}
