Update with ngStyle

--- a/src/app/styling/styling.component.html
+++ b/src/app/styling/styling.component.html
@@ -1,1 +1,30 @@
-<p>styling works!</p>
+<!--<h1 [class.highlight]="highlight" [class.primary]="primary" [class.underline]="underline">Let's style with classes</h1>-->
+<h1 [ngClass]="h1Classes">Let's style with classes</h1>
+<div>
+  <label>
+    <input type="checkbox" [(ngModel)]="highlight" (ngModelChange)="setH1Classes()"> Highlight
+  </label>
+  <label>
+    <input type="checkbox" [(ngModel)]="primary" (ngModelChange)="setH1Classes()"> Primary Color
+  </label>
+  <label>
+    <input type="checkbox" [(ngModel)]="underline" (ngModelChange)="setH1Classes()"> Underline
+  </label>
+</div>
+<hr>
+<!--<h1 [style.backgroundColor]="highlight2? 'yellow': 'white'"-->
+<!--    [style.color]="primary2? 'blue': 'black'"-->
+<!--    [style.textDecoration]="underline2? 'underline': 'none'"-->
+<!--&gt;Let's style with some style properties</h1>-->
+<h1 [ngStyle]="h1Styles">Let's style with some style properties</h1>
+<div>
+  <label>
+    <input type="checkbox" [(ngModel)]="highlight2" (ngModelChange)="setH1Styles()"> Highlight
+  </label>
+  <label>
+    <input type="checkbox" [(ngModel)]="primary2" (ngModelChange)="setH1Styles()"> Primary Color
+  </label>
+  <label>
+    <input type="checkbox" [(ngModel)]="underline2" (ngModelChange)="setH1Styles()"> Underline
+  </label>
+</div>
