--- a/src/app/structual/structural.component.html
+++ b/src/app/structual/structural.component.html
@@ -1,1 +1,26 @@
-<p>structual works!</p>
+<h1>ngIf Directive</h1>
+<p *ngIf="showParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias amet commodi cumque distinctio et impedit maiores natus, necessitatibus numquam omnis optio perferendis placeat possimus quisquam sapiente soluta tempora tenetur vel.</p>
+<!--<button (click)="toggleVisibility()">Show/Hide Paragraph</button>-->
+<button (click)="showParagraph = !showParagraph">Show/Hide Paragraph</button>
+<hr>
+<h1>ngFor Directive</h1>
+<table>
+  <thead>
+    <tr>
+      <th>No</th>
+      <th>ID</th>
+      <th>Name</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let s of students; let i = index" [class.row]="i % 2 === 0">
+      <td>{{i}}</td>
+      <td>{{s.id}}</td>
+      <td>{{s.name}}</td>
+    </tr>
+  </tbody>
+</table>
+<div class="control-center">
+<button (click)="reloadStudents()">Reload Students</button>
+<button  (click)="students = []">Clear Students</button>
+</div>
