Add parent and child compoenent

--- a/src/app/structual/structural.component.html
+++ b/src/app/structual/structural.component.html
@@ -14,7 +14,7 @@
   </thead>
   <tbody>
 <!--    <tr *ngFor="let s of students; let i = index" [class.row]="i % 2 === 0">-->
-    <tr *ngFor="let s of students; let i = index; trackBy: byId">
+    <tr *ngFor="let s of students; let i = index;">
       <td>{{i}}</td>
       <td>{{s.id}}</td>
       <td>{{s.name}}</td>
@@ -23,7 +23,22 @@
 </table>
 <div class="control-center">
 <button (click)="reloadStudents()">Reload Students</button>
-<button (click)="reloadStudents2()">Reload Students 2</button>
-<button (click)="students[1].name = 'Kasun'">Change Student Details</button>
-<button  (click)="students = []">Clear Students</button>
 </div>
+<hr>
+<h1>ngSwitch Directive</h1>
+<ul>
+<!--  <li *ngFor="let s of students" [ngSwitch]="s.rating">-->
+<!--    {{s.name}} - -->
+<!--    <span *ngSwitchCase="5">⭐⭐⭐⭐⭐</span>-->
+<!--    <span *ngSwitchCase="4">⭐⭐⭐⭐</span>-->
+<!--    <span *ngSwitchDefault>⭐⭐⭐</span>-->
+<!--  </li>-->
+  <li *ngFor="let s of students">
+    <ng-container [ngSwitch]="s.rating">
+      {{s.name}} -
+      <span *ngSwitchCase="5">⭐⭐⭐⭐⭐</span>
+      <span *ngSwitchCase="4">⭐⭐⭐⭐</span>
+      <span *ngSwitchDefault>⭐⭐⭐</span>
+    </ng-container>
+  </li>
+</ul>
