--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -1,8 +1,8 @@
 <header>
   Cart: {{inCart}}
-  <button>Remove</button>
+  <button (click)="value = value + 1;">Remove</button>
 </header>
 
 <main>
-  <app-child (updateCart)="changeCart($event)"></app-child>
+  <app-child (updateCart)="changeCart($event)" [stock]="value"></app-child>
 </main>
