--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -1,5 +1,5 @@
 <img alt="item" src="assets/images/item.jpg">
 <p>Hard Disk</p>
-<p *ngIf="stock !== 0">In stock: {{stock}}</p>
-<p *ngIf="stock===0" class="error">Out of Stock</p>
+<p *ngIf="(stock - inCart) !== 0">In stock: {{stock - inCart}}</p>
+<p *ngIf="(stock - inCart)===0" class="error">Out of Stock</p>
 <button (click)="addToCart()">Add to cart</button>
