Component Life Cycle

--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -5,4 +5,5 @@
 
 <main>
   <app-child (updateCart)="changeCart($event)" [inCart]="inCart"></app-child>
+<!--  <app-child (updateCart)="changeCart($event)" [inCart]="inCart"></app-child>-->
 </main>
